feat(index): Add markup without styles

--- a/index.html
+++ b/index.html
@@ -7,8 +7,194 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus neque,
-    dolore blanditiis veritatis amet voluptates nisi, optio placeat eum in porro
-    minus, culpa doloribus? Quas necessitatibus voluptatem hic doloribus nobis.
+    <aside class="sidebar">
+      <div class="sidebar__logo">
+        <img src="" alt="logo" class="logo__img" />
+        <p class="logo_txt">Dashboard</p>
+      </div>
+      <ul>
+        <li><img src="" alt="Home" /><span>Home</span></li>
+        <li><img src="" alt="Profile" /><span>Profile</span></li>
+        <li><img src="" alt="Messages" /><span>Messages</span></li>
+        <li><img src="" alt="History" /><span>History</span></li>
+        <li><img src="" alt="Tasks" /><span>Tasks</span></li>
+        <li><img src="" alt="Communities" /><span>Communities</span></li>
+      </ul>
+
+      <ul>
+        <li><img src="" alt="Settings" /><span>Settings</span></li>
+        <li><img src="" alt="Support" /><span>Support</span></li>
+        <li><img src="" alt="Privacy" /><span>Privacy</span></li>
+      </ul>
+    </aside>
+
+    <main>
+      <header>
+        <div>
+          <img src="" alt="search" class="search__icon" />
+          <input type="search" name="search" id="search" placeholder="search" />
+          <img src="" alt="notifications" class="notif__icon" />
+          <img src="" alt="userLogo" class="user__logo user__logo--sm" />
+          <span class="username">Morgan Oakley</span>
+        </div>
+
+        <div>
+          <img src="" alt="userLogo" class="user__logo user__logo--big" />
+          <p>Hi there,</p>
+          <p>Morgan Oakley(@morgan)</p>
+        </div>
+
+        <div>
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
+      </header>
+
+      <div class="content">
+        <section>
+          <h2>Your Projects</h2>
+          <div class="cards">
+            <div class="card">
+              <p class="card__heading">Super Cool Project</p>
+              <p class="card__desc">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Accusamus repellat consectetur nostrum ipsum explicabo omnis.
+              </p>
+              <div class="card__icons">
+                <img src="" alt="fav" class="card__fav" />
+                <img src="" alt="eye" class="card__eye" />
+                <img src="" alt="share" class="card__share" />
+              </div>
+            </div>
+            <div class="card">
+              <p class="card__heading">Super Cool Project</p>
+              <p class="card__desc">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Accusamus repellat consectetur nostrum ipsum explicabo omnis.
+              </p>
+              <div class="card__icons">
+                <img src="" alt="fav" class="card__fav" />
+                <img src="" alt="eye" class="card__eye" />
+                <img src="" alt="share" class="card__share" />
+              </div>
+            </div>
+            <div class="card">
+              <p class="card__heading">Super Cool Project</p>
+              <p class="card__desc">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Accusamus repellat consectetur nostrum ipsum explicabo omnis.
+              </p>
+              <div class="card__icons">
+                <img src="" alt="fav" class="card__fav" />
+                <img src="" alt="eye" class="card__eye" />
+                <img src="" alt="share" class="card__share" />
+              </div>
+            </div>
+            <div class="card">
+              <p class="card__heading">Super Cool Project</p>
+              <p class="card__desc">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Accusamus repellat consectetur nostrum ipsum explicabo omnis.
+              </p>
+              <div class="card__icons">
+                <img src="" alt="fav" class="card__fav" />
+                <img src="" alt="eye" class="card__eye" />
+                <img src="" alt="share" class="card__share" />
+              </div>
+            </div>
+            <div class="card">
+              <p class="card__heading">Super Cool Project</p>
+              <p class="card__desc">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Accusamus repellat consectetur nostrum ipsum explicabo omnis.
+              </p>
+              <div class="card__icons">
+                <img src="" alt="fav" class="card__fav" />
+                <img src="" alt="eye" class="card__eye" />
+                <img src="" alt="share" class="card__share" />
+              </div>
+            </div>
+            <div class="card">
+              <p class="card__heading">Super Cool Project</p>
+              <p class="card__desc">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Accusamus repellat consectetur nostrum ipsum explicabo omnis.
+              </p>
+              <div class="card__icons">
+                <img src="" alt="fav" class="card__fav" />
+                <img src="" alt="eye" class="card__eye" />
+                <img src="" alt="share" class="card__share" />
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section>
+          <h2>Announcements</h2>
+          <div>
+            <ul>
+              <li>
+                <h4>Site Maintenance</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
+                  sint? Voluptatum provident odio obcaecati reiciendis.
+                </p>
+              </li>
+              <li>
+                <h4>Community share day</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
+                  sint? Voluptatum provident odio obcaecati reiciendis.
+                </p>
+              </li>
+              <li>
+                <h4>Updated Privacy Policy</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
+                  sint? Voluptatum provident odio obcaecati reiciendis.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <section>
+          <h2>Trending</h2>
+          <div>
+            <ul>
+              <li>
+                <img src="" alt="trending1" />
+                <div class="">
+                  <p>@tegan</p>
+                  <p>World Peace Builder</p>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="trending2" />
+                <div class="">
+                  <p>@tegan</p>
+                  <p>World Peace Builder</p>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="trending3" />
+                <div class="">
+                  <p>@tegan</p>
+                  <p>World Peace Builder</p>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="trending4" />
+                <div class="">
+                  <p>@tegan</p>
+                  <p>World Peace Builder</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
