styles: Apply broadstrokes to sidebar

--- a/index.html
+++ b/index.html
@@ -9,22 +9,63 @@
   <body>
     <aside class="sidebar">
       <div class="sidebar__logo">
-        <img src="" alt="logo" class="logo__img" />
+        <img
+          src="./assets/dashboard-project.png"
+          alt="logo"
+          class="logo__img"
+        />
         <p class="logo_txt">Dashboard</p>
       </div>
+
       <ul>
-        <li><img src="" alt="Home" /><span>Home</span></li>
-        <li><img src="" alt="Profile" /><span>Profile</span></li>
-        <li><img src="" alt="Messages" /><span>Messages</span></li>
-        <li><img src="" alt="History" /><span>History</span></li>
-        <li><img src="" alt="Tasks" /><span>Tasks</span></li>
-        <li><img src="" alt="Communities" /><span>Communities</span></li>
+        <li>
+          <img src="./assets/dashboard-project.png" alt="Home" /><span
+            >Home</span
+          >
+        </li>
+        <li>
+          <img src="./assets/dashboard-project.png" alt="Profile" /><span
+            >Profile</span
+          >
+        </li>
+        <li>
+          <img src="./assets/dashboard-project.png" alt="Messages" /><span
+            >Messages</span
+          >
+        </li>
+        <li>
+          <img src="./assets/dashboard-project.png" alt="History" /><span
+            >History</span
+          >
+        </li>
+        <li>
+          <img src="./assets/dashboard-project.png" alt="Tasks" /><span
+            >Tasks</span
+          >
+        </li>
+        <li>
+          <img src="./assets/dashboard-project.png" alt="Communities" /><span
+            >Communities</span
+          >
+        </li>
       </ul>
 
       <ul>
-        <li><img src="" alt="Settings" /><span>Settings</span></li>
-        <li><img src="" alt="Support" /><span>Support</span></li>
-        <li><img src="" alt="Privacy" /><span>Privacy</span></li>
+        <li>
+          <img src="./assets/dashboard-project.png" alt="Settings" /><span
+            >Settings</span
+          >
+        </li>
+        <li>
+          <img src="./assets/dashboard-project.png" alt="Support" /><span
+            >Support</span
+          >
+        </li>
+        <li>
+          <img src="./assets/dashboard-project.png" alt="Privacy" /><span
+            >Privacy</span
+          >
+        </li>
       </ul>
     </aside>
 
