styles: Add layout for header

--- a/index.html
+++ b/index.html
@@ -71,24 +71,51 @@
 
     <main>
       <header>
-        <div>
-          <img src="" alt="search" class="search__icon" />
-          <input type="search" name="search" id="search" placeholder="search" />
-          <img src="" alt="notifications" class="notif__icon" />
-          <img src="" alt="userLogo" class="user__logo user__logo--sm" />
+        <div class="search">
+          <img
+            src="./assets/dashboard-project.png"
+            alt="search"
+            class="search__icon"
+          />
+          <input
+            type="search"
+            name="search"
+            id="search"
+            placeholder="search"
+            class="search__input"
+          />
+        </div>
+
+        <div class="status">
+          <img
+            src="./assets/dashboard-project.png"
+            alt="notifications"
+            class="notif__icon"
+          />
+          <img
+            src="./assets/dashboard-project.png"
+            alt="userLogo"
+            class="user__logo user__logo--sm"
+          />
           <span class="username">Morgan Oakley</span>
         </div>
 
-        <div>
-          <img src="" alt="userLogo" class="user__logo user__logo--big" />
-          <p>Hi there,</p>
-          <p>Morgan Oakley(@morgan)</p>
+        <div class="welcome">
+          <img
+            src="./assets/dashboard-project.png"
+            alt="userLogo"
+            class="user__logo user__logo--big"
+          />
+          <div class="">
+            <p>Hi there,</p>
+            <p>Morgan Oakley(@morgan)</p>
+          </div>
         </div>
 
-        <div>
-          <button>New</button>
-          <button>Upload</button>
-          <button>Share</button>
+        <div class="header__buttons">
+          <button type="button">New</button>
+          <button type="button">Upload</button>
+          <button type="button">Share</button>
         </div>
       </header>
 
