styles: Add layout to cards

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </header>
 
       <div class="content">
-        <section>
+        <section class="projects">
           <h2>Your Projects</h2>
           <div class="cards">
             <div class="card">
@@ -198,7 +198,7 @@
           </div>
         </section>
 
-        <section>
+        <section class="announcements">
           <h2>Announcements</h2>
           <div>
             <ul>
@@ -227,7 +227,7 @@
           </div>
         </section>
 
-        <section>
+        <section class="trending">
           <h2>Trending</h2>
           <div>
             <ul>
