styles: Add layout to Announcements section

--- a/index.html
+++ b/index.html
@@ -142,9 +142,21 @@
                 Accusamus repellat consectetur nostrum ipsum explicabo omnis.
               </p>
               <div class="card__icons">
-                <img src="" alt="fav" class="card__fav" />
-                <img src="" alt="eye" class="card__eye" />
-                <img src="" alt="share" class="card__share" />
+                <img
+                  src="./assets/dashboard-project.png"
+                  alt="fav"
+                  class="card__fav"
+                />
+                <img
+                  src="./assets/dashboard-project.png"
+                  alt="eye"
+                  class="card__eye"
+                />
+                <img
+                  src="./assets/dashboard-project.png"
+                  alt="share"
+                  class="card__share"
+                />
               </div>
             </div>
             <div class="card">
@@ -200,31 +212,29 @@
 
         <section class="announcements">
           <h2>Announcements</h2>
-          <div>
-            <ul>
-              <li>
-                <h4>Site Maintenance</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
-                  sint? Voluptatum provident odio obcaecati reiciendis.
-                </p>
-              </li>
-              <li>
-                <h4>Community share day</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
-                  sint? Voluptatum provident odio obcaecati reiciendis.
-                </p>
-              </li>
-              <li>
-                <h4>Updated Privacy Policy</h4>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
-                  sint? Voluptatum provident odio obcaecati reiciendis.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <ul>
+            <li>
+              <h4>Site Maintenance</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
+                sint? Voluptatum provident odio obcaecati reiciendis.
+              </p>
+            </li>
+            <li>
+              <h4>Community share day</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
+                sint? Voluptatum provident odio obcaecati reiciendis.
+              </p>
+            </li>
+            <li>
+              <h4>Updated Privacy Policy</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea,
+                sint? Voluptatum provident odio obcaecati reiciendis.
+              </p>
+            </li>
+          </ul>
         </section>
 
         <section class="trending">
