styles: Trending section

--- a/index.html
+++ b/index.html
@@ -239,38 +239,36 @@
 
         <section class="trending">
           <h2>Trending</h2>
-          <div>
-            <ul>
-              <li>
-                <img src="" alt="trending1" />
-                <div class="">
-                  <p>@tegan</p>
-                  <p>World Peace Builder</p>
-                </div>
-              </li>
-              <li>
-                <img src="" alt="trending2" />
-                <div class="">
-                  <p>@tegan</p>
-                  <p>World Peace Builder</p>
-                </div>
-              </li>
-              <li>
-                <img src="" alt="trending3" />
-                <div class="">
-                  <p>@tegan</p>
-                  <p>World Peace Builder</p>
-                </div>
-              </li>
-              <li>
-                <img src="" alt="trending4" />
-                <div class="">
-                  <p>@tegan</p>
-                  <p>World Peace Builder</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+          <ul>
+            <li>
+              <img src="./assets/dashboard-project.png" alt="trending1" />
+              <div class="">
+                <p>@tegan</p>
+                <p>World Peace Builder</p>
+              </div>
+            </li>
+            <li>
+              <img src="/assets/dashboard-project.png" alt="trending2" />
+              <div class="">
+                <p>@tegan</p>
+                <p>World Peace Builder</p>
+              </div>
+            </li>
+            <li>
+              <img src="/assets/dashboard-project.png" alt="trending3" />
+              <div class="">
+                <p>@tegan</p>
+                <p>World Peace Builder</p>
+              </div>
+            </li>
+            <li>
+              <img src="/assets/dashboard-project.png" alt="trending4" />
+              <div class="">
+                <p>@tegan</p>
+                <p>World Peace Builder</p>
+              </div>
+            </li>
+          </ul>
         </section>
       </div>
     </main>
