feat: Add dark theme

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="https://fav.farm/🔥" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <aside class="sidebar">
@@ -117,6 +118,16 @@
         </div>
 
         <div class="status">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            class="invert__theme"
+          >
+            <title>brightness-6</title>
+            <path
+              d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
+            />
+          </svg>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <title>bell-ring-outline</title>
             <path
